runFormatTest(import.meta, ["yaml"], { checkIgnorePragma: false });
